--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,8 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 @import url("https://fonts.googleapis.com/css2?family=Encode+Sans+Expanded:wght@300&display=swap");
-@import 'ngx-owl-carousel-o/lib/styles/scss/owl.carousel';
-@import 'ngx-owl-carousel-o/lib/styles/scss/owl.theme.default';
+@forward  'ngx-owl-carousel-o/lib/styles/scss/owl.carousel' ;
+@forward  'ngx-owl-carousel-o/lib/styles/scss/owl.theme.default';
 :root {
   --main-color: #0aad0a;
   --light-color: #f0f3f2;
