--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,8 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 @import url("https://fonts.googleapis.com/css2?family=Encode+Sans+Expanded:wght@300&display=swap");
-@forward  'ngx-owl-carousel-o/lib/styles/scss/owl.carousel' ;
-@forward  'ngx-owl-carousel-o/lib/styles/scss/owl.theme.default';
+@use 'ngx-owl-carousel-o/lib/styles/scss/owl.carousel' as owl1;
+@use 'ngx-owl-carousel-o/lib/styles/scss/owl.theme.default' as owl2;
+
 :root {
   --main-color: #0aad0a;
   --light-color: #f0f3f2;
